# edoo-auth-python

./: PROPOSAL.md  README.md  edoo_auth_test_settings.py  pyproject.toml  requirements.txt
edoo_auth/: __init__.py
edoo_auth/core/: jwks.py  oidc.py  oidc_types.py  session.py  types.py
edoo_auth/django/: __init__.py  authentication.py  client.py  middleware.py  permissions.py  urls.py  views.py
tests/: conftest.py  test_core.py  test_django.py  test_oidc.py
